update: layout and image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="mx-5 mt-8 sm:flex sm:items-center lg:mx-40 lg:mt-16 id=" about">
       <div class="mt-8 sm:w-2/5 lg:mt-0">
         <div class="flex w-full flex-col items-center justify-center text-white">
-          <img src="public/vite.svg" alt="Reza Setyawan Picture"
+          <img src="public/gwejh.jpg" alt="Reza Setyawan Picture"
             class="block aspect-square h-60 w-60 rounded-full border border-white object-cover p-1 scale-x-[-1]" />
           <h2 class="mt-3 font-semibold">Reza Setyawan</h2>
           <p class="text-center text-sm">
@@ -536,7 +536,7 @@
     <section class="mx-5 mt-16 grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-12 lg:mx-20 lg:mt-20 xl:gap-16">
       <div>
         <h2 class="text-3xl font-semibold text-white">Soft Skills</h2>
-        <ul class="lg:whitespace-nowrap text-sm lg:text-base">
+        <ul class="lg:whitespace-nowrap text-sm lg:text-base mt-3">
           <li class="list-inside list-disc">
             Teamwork
           </li>
@@ -562,7 +562,7 @@
       </div>
       <div>
         <h2 class="text-3xl font-semibold text-white">Certifications</h2>
-        <ul class="lg:whitespace-nowrap text-sm lg:text-base">
+        <ul class="lg:whitespace-nowrap text-sm lg:text-base mt-3">
           <li class="list-inside list-disc">
             BNSP - Junior Assitant Programmer (2024)
           </li>
@@ -576,7 +576,7 @@
       </div>
       <div>
         <h2 class="text-3xl font-semibold text-white">Educations</h2>
-        <ul class="lg:whitespace-nowrap text-sm lg:text-base">
+        <ul class="lg:whitespace-nowrap text-sm lg:text-base mt-3">
           <li class="list-inside list-disc">
             Universitas Siber Asia - PJJ Informatika (2024 - present)
           </li>
