update: meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <link rel="icon" type="image/svg+xml" href="/public/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reza Setyawan</title>
+  <meta name="description"
+    content="Reza Setyawan - Fullstack Web Developer with expertise in front-end and back-end technologies. Currently working at PT. Awan Network Indonesia (Anihost) and pursuing a degree in Informatics at Universitas Siber Asia. Explore my portfolio, projects, and experiences in web development." />
+  <meta name="keywords"
+    content="Reza Setyawan, Fullstack Web Developer, PT. Awan Network Indonesia, Universitas Siber Asia, Frontend Developer, Backend Developer, Web Development, Portfolio, Projects, Experiences, HTML, CSS, JavaScript, React, Vue, Tailwind CSS, PostgreSQL, Laravel, Node.js, Nest.js" />
+  <meta name="author" content="Reza Setyawan" />
+  <meta property="og:title" content="Reza Setyawan - Fullstack Web Developer" />
+  <meta property="og:description"
+    content="Discover the portfolio and experiences of Reza Setyawan, a Fullstack Web Developer skilled in modern web technologies and passionate about creating engaging web experiences." />
+  <meta property="og:image" content="public/gwejh.jpg" />
+  <meta property="og:url" content="https://www.reza-setyawan.my.id" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Reza Setyawan - Fullstack Web Developer" />
+  <meta name="twitter:description"
+    content="Explore the projects and skills of Reza Setyawan, a Fullstack Web Developer with a passion for web development and modern technologies." />
+  <meta name="twitter:image" content="public/gwejh.jpg" />
   <link rel="stylesheet" href="style.css">
   </link>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
