--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Nama: Reza Setyawan -->
+<!-- NIM: 240401010215 -->
+<!-- Kelas: IF106 -->
+<!-- Mata Kuliah: Pemrograman Web I -->
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/public/favicon.jpg" />
@@ -43,7 +48,6 @@
     " class="text-white">
   <header class="w-full">
     <nav class="flex max-sm:gap-4 sm:justify-between items-center px-4 py-4 text-white sm:px-6 lg:py-4 lg:px-28">
-      <!-- <MobileNav pathname="{pathname}" client:load /> -->
       <div class="relative sm:hidden" id="mobile-nav-container">
         <button id="mobile-nav-toggle"
           class="h-auto w-14 flex justify-center rounded-full py-1.5 px-1 bg-[#16A34A] cursor-pointer"
@@ -80,7 +84,7 @@
         <div class="flex w-full flex-col items-center justify-center text-white">
           <img src="public/gwejh.jpg" alt="Reza Setyawan Picture"
             class="block aspect-square h-60 w-60 rounded-full border border-white object-cover p-1 scale-x-[-1]" />
-          <h2 class="mt-3 font-semibold">Reza Setyawan</h2>
+          <h1 class="mt-3 font-semibold"><strong>Reza Setyawan</strong></h1>
           <p class="text-center text-sm">
             Fullstack Web Developer | Web Development Enthusiast
           </p>
@@ -100,13 +104,15 @@
               </svg>
 
             </a>
-            <a href="https://www.linkedin.com/in/reza-setyawan" class="flex gap-2">
+            <a href="https://www.linkedin.com/in/reza-setyawan" class="flex gap-2" target="_blank"
+              rel="noopener noreferrer">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg"
                 alt="linkedin" class="w-8" />
 
             </a>
 
-            <a href="mailto:setyawanreza960@gmail.com" class="flex gap-2" target="_blank" rel="noopener noreferrer">
+            <a href="mailto:setyawanreza960@gmail.com?subject=Halo%20Reza" class="flex gap-2" target="_blank"
+              rel="noopener noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-8" viewBox="0 0 48 48">
                 <path fill="#4caf50" d="M45,16.2l-5,2.75l-5,4.75L35,40h7c1.657,0,3-1.343,3-3V16.2z"></path>
                 <path fill="#1e88e5" d="M3,16.2l3.614,1.71L13,23.7V40H6c-1.657,0-3-1.343-3-3V16.2z"></path>
@@ -119,24 +125,18 @@
                   d="M45,12.298V16.2l-10,7.5V11.2l3.124-2.341C38.868,8.301,39.772,8,40.702,8h0 C43.076,8,45,9.924,45,12.298z">
                 </path>
               </svg>
-              <!-- <div class="text-sm max-sm:hidden">
-                  <h3>Linkedin</h3>
-                  <span class="text-gray-400">rezasetyawan</span>
-                </div> -->
             </a>
           </div>
         </div>
       </div>
       <div class="text-white max-sm:mt-5 sm:w-3/5">
         <h2 class="text-3xl font-semibold lg:text-4xl">
-          <!-- Your vision, my skills - let's build something -->
-
           <span class="">About me</span>
-          <!-- that works for you -->
         </h2>
         <div class="mt-4 tracking-wide flex flex-col gap-4">
           <p>
-            Hi, you can call me Reza, I'm a passionate Full-Stack Web
+            Hi, you can call me <bold class="font-semibold"><u class="text-underline">Reza</u></bold>, I'm a passionate
+            Full-Stack Web
             Developer who thrives on building engaging web experiences.
           </p>
           <p>
@@ -154,15 +154,7 @@
             frameworks like Nest.js and databases like PostgreSQL, ensuring
             smooth functionality.
           </p>
-          <!-- Hi, thank you for visiting my portfolio, don't hesitate to explore,
-            scroll now! or need help? contact me by looking at the bottom there
-            is my contact. -->
         </div>
-        <!-- <a href="/portofolio"
-            ><button className="mt-4 rounded-full lg:mt-8">
-              See My Portofolio
-            </button></a
-          > -->
       </div>
     </section>
     <section class="mx-5 mt-16 lg:mx-20 lg:mt-20" id="project">
@@ -604,7 +596,6 @@
       </div>
     </section>
   </main>
-  <!-- <script type="module" src="/src/main.js"></script> -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const toggleBtn = document.getElementById("mobile-nav-toggle");
