fix: mobile nav

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </button>
 
         <nav id="mobile-nav"
-          class="fixed left-5 mt-5 w-52 flex-col gap-3 rounded-md bg-white p-3 text-black opacity-0 pointer-events-none transition-all">
+          class="fixed left-5 mt-5 w-52 flex-col gap-3 rounded-md bg-white p-3 text-black opacity-0 pointer-events-none transition-all z-[2000]">
           <a href="#about" class="block mobile-nav-link">About</a>
           <a href="#project" class="block mobile-nav-link">Portofolio</a>
           <a href="#experiences" class="block mobile-nav-link">Experiences</a>
